spacing fixes

--- a/style/main.css
+++ b/style/main.css
@@ -240,9 +240,18 @@ section li ul {
   }
 }
 
+
+
 @media screen and (min-width: 768px) {
+.main-container{
+  max-width: 75%;
+  margin: auto;
+}
+
   main {
     margin-left: 12em;
+
+
   }
 
   nav {
